--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/Captura de Tela (14).png" type="image/x-icon">
-    <title>Calculadora de Entrega - Fortaleza-CE</title>
+    <link rel="shortcut icon" href="img/Red_Simple_Expedition_Logo__1_-removebg-preview.png" type="image/x-icon">
+    <title>Calculadora de Entrega</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div><h1>Ronald motoboy</h1></div>
+    <div class="logo">
+        <img src="img/Red_Simple_Expedition_Logo__1_-removebg-preview.png" alt="">
+    </div>
     <div class="container">
-        <h2>Calculadora de Entrega</h2>
+        <h1>Calculadora de Entrega</h1>
         <form id="deliveryForm">
             <label for="pickup">Endereço de Coleta:</label>
             <input type="text" id="pickup" placeholder="Digite o endereço de coleta">
