--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <div class="logo">
-        <img src="img/Red_Simple_Expedition_Logo__1_-removebg-preview.png" alt="">
+        <img src="img/logo-midjorney.webp" alt="">
+        <h1>Ronald</h1>
+        <p>Motociclista Entregador</p>
     </div>
     <div class="container">
-        <h1>Calculadora de Entrega</h1>
+        <h2>Calculadora de Entrega</h2>
         <form id="deliveryForm">
             <label for="pickup">Endereço de Coleta:</label>
             <input type="text" id="pickup" placeholder="Digite o endereço de coleta">
